[package]
name = "panic_safety"
version = "0.1.0"
authors = ["Gus Wynn <guswynn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = { version = "0.14.7", features = ["full"] }
hyper = { version = "99.99.99", features = ["full"], git = "https://github.com/guswynn/hyper", branch = "drop" }
once_cell = "1.7.2"
slog = "2.7.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8.0"
tokio = { version = "1.6.0", features = ["full"] }
tracing = { version = "0.1.26", features = ["log-always"] }

[features]
test_drop = ["hyper/test_drop"]
